@@ -2093,4 +2093,52 @@ static const mon_spellbook mspell_list[] =
         { SPELL_FLASH_FREEZE, 62, MON_SPELL_NATURAL | MON_SPELL_BREATH },
       }
     },
+
+    {  MST_LICH_I,
+      {
+       { SPELL_BOLT_OF_FIRE, 12, MON_SPELL_WIZARD },
+       { SPELL_IRON_SHOT, 12, MON_SPELL_WIZARD },
+       { SPELL_SUMMON_GREATER_DEMON, 12, MON_SPELL_WIZARD },
+       { SPELL_CONFUSE, 12, MON_SPELL_WIZARD },
+       { SPELL_INVISIBILITY, 12, MON_SPELL_WIZARD },
+      }
+    },
+
+    {  MST_LICH_II,
+      {
+       { SPELL_BOLT_OF_COLD, 12, MON_SPELL_WIZARD },
+       { SPELL_FORCE_LANCE, 12, MON_SPELL_WIZARD },
+       { SPELL_SUMMON_GREATER_DEMON, 12, MON_SPELL_WIZARD },
+       { SPELL_SLOW, 12, MON_SPELL_WIZARD },
+       { SPELL_INVISIBILITY, 12, MON_SPELL_WIZARD },
+      }
+    },
+
+    {  MST_LICH_III,
+      {
+       { SPELL_BOLT_OF_DRAINING, 18, MON_SPELL_WIZARD },
+       { SPELL_IOOD, 12, MON_SPELL_WIZARD },
+       { SPELL_PARALYSE, 18, MON_SPELL_WIZARD },
+       { SPELL_HASTE, 12, MON_SPELL_WIZARD },
+      }
+    },
+
+    {  MST_LICH_IV,
+      {
+       { SPELL_CORROSIVE_BOLT, 18, MON_SPELL_WIZARD },
+       { SPELL_LEHUDIBS_CRYSTAL_SPEAR, 12, MON_SPELL_WIZARD },
+       { SPELL_PETRIFY, 18, MON_SPELL_WIZARD },
+       { SPELL_HASTE, 12, MON_SPELL_WIZARD },
+      }
+    },
+
+    {  MST_LICH_V,
+      {
+       { SPELL_LIGHTNING_BOLT, 12, MON_SPELL_WIZARD },
+       { SPELL_POISON_ARROW, 12, MON_SPELL_WIZARD },
+       { SPELL_HAUNT, 12, MON_SPELL_WIZARD },
+       { SPELL_BANISHMENT, 12, MON_SPELL_WIZARD },
+       { SPELL_HASTE, 12, MON_SPELL_WIZARD },
+      }
+    },
 };
